[package]
name = "align-address"
version = "0.4.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
rust-version = "1.57"
description = "Functions for aligning addresses."
repository = "https://github.com/mkroening/align-address"
license = "MIT OR Apache-2.0"
keywords = ["align", "address"]
categories = ["no-std"]
